--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,12 @@ repositories {
 dependencies {
 
     implementation 'io.dropwizard:dropwizard-core:2.1.12'
+    implementation 'io.dropwizard:dropwizard-jdbi3:2.1.2'
+    implementation 'org.postgresql:postgresql:42.2.10'
+    testImplementation 'org.openjdk.jmh:jmh-core:1.37'
+    testImplementation 'org.openjdk.jmh:jmh-generator-annprocess:1.37'
+
+
 
 }
 
